# swagger.json
@@ -114,68 +114,6 @@
         }
       }
     },
-    "/todo/{groupId}": {
-      "get": {
-        "tags": [
-          "Todo"
-        ],
-        "description": "get all todos that belong to a group",
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "name": "groupId",
-            "in": "path",
-            "required": true,
-            "type": "string",
-            "description": "The Group ID"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Sends back array of all todos in the specific group",
-            "schema": {
-              "$ref": "#/definitions/todosArray"
-            }
-          },
-          "400": {
-            "description": "Invalid Request"
-          }
-        }
-      }
-    },
-    "/todo/{userId}": {
-      "get": {
-        "tags": [
-          "Todo"
-        ],
-        "description": "get all todos that belong to a user",
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "name": "userId",
-            "in": "path",
-            "required": true,
-            "type": "string",
-            "description": "The User ID"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Sends back array of all todos where the primary responsible is the user",
-            "schema": {
-              "$ref": "#/definitions/todosArray"
-            }
-          },
-          "400": {
-            "description": "Invalid Request"
-          }
-        }
-      }
-    },
     "/todo/{todoId}": {
       "get": {
         "tags": [
@@ -276,7 +214,7 @@
         }
       }
     },
-    "/user/{groupId}": {
+    "/user/": {
       "get": {
         "tags": [
           "User"
@@ -288,15 +226,7 @@
         "produces": [
           "application/json"
         ],
-        "parameters": [
-          {
-            "name": "groupId",
-            "in": "path",
-            "required": true,
-            "type": "string",
-            "description": "The ID of the group to get all users from, Required"
-          }
-        ],
+        "parameters": [],
         "responses": {
           "200": {
             "description": "Sends back array of users",
@@ -308,9 +238,7 @@
             "description": "Invalid Request"
           }
         }
-      }
-    },
-    "/user/": {
+      },
       "post": {
         "tags": [
           "User"
@@ -865,16 +793,7 @@
           "type": "string",
           "example": "New Group"
         },
-        "userIDsToAdd": {
-          "type": "array",
-          "example": [
-            "12345"
-          ],
-          "items": {
-            "type": "string"
-          }
-        },
-        "userIDsToRemove": {
+        "members": {
           "type": "array",
           "example": [
             "12345"
